[gd_scene load_steps=10 format=3 uid="uid://xs3ydlok77g1"]

[ext_resource type="Script" path="res://addons/AIStateMachine/Scripts/AIParameterConnection.gd" id="1_751ut"]
[ext_resource type="Texture2D" uid="uid://bpu2f8c8kubnh" path="res://addons/AIStateMachine/Icons/Enter1.png" id="2_dui6e"]
[ext_resource type="Texture2D" uid="uid://c520gh6njdjgx" path="res://addons/AIStateMachine/Icons/CheckedBox.png" id="3_k1ht7"]
[ext_resource type="Texture2D" uid="uid://gq26b86bntk7" path="res://addons/AIStateMachine/Icons/UncheckedBox.png" id="4_r2wvk"]
[ext_resource type="Theme" uid="uid://bix50iqwowkq5" path="res://addons/AIStateMachine/Themes/AIStateMachineTheme.tres" id="5_1ugmp"]
[ext_resource type="Texture2D" uid="uid://cmtmquhxqwdri" path="res://addons/AIStateMachine/Icons/OptionsDots1.png" id="6_m8j16"]
[ext_resource type="Texture2D" uid="uid://tels42klcuyi" path="res://addons/AIStateMachine/Icons/Trash.png" id="7_gvnje"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5lma"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s28i4"]
bg_color = Color(0.47451, 0.47451, 0.47451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="AIParameterConnection" type="Panel" groups=["ParameterConnection"]]
custom_minimum_size = Vector2(416, 42)
offset_right = 416.0
offset_bottom = 42.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b5lma")
script = ExtResource("1_751ut")

[node name="ParameterContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(416, 42)
layout_mode = 0
offset_right = 320.0
offset_bottom = 42.0

[node name="Spacing2" type="Control" parent="ParameterContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ParameterName" type="Label" parent="ParameterContainer"]
custom_minimum_size = Vector2(176, 42)
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_font_sizes/font_size = 19
text = "ParamName"
vertical_alignment = 1

[node name="Spacing" type="Control" parent="ParameterContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ParameterValue" type="Control" parent="ParameterContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ValueTrigger" type="Label" parent="ParameterContainer/ParameterValue"]
visible = false
custom_minimum_size = Vector2(0, 42)
layout_mode = 0
offset_right = 108.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "TRIGGER"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="TriggerIcon" type="TextureRect" parent="ParameterContainer/ParameterValue/ValueTrigger"]
layout_mode = 0
offset_top = 10.0
offset_right = 24.0
offset_bottom = 34.0
texture = ExtResource("2_dui6e")
expand_mode = 1

[node name="ValueBool" type="CheckBox" parent="ParameterContainer/ParameterValue"]
visible = false
custom_minimum_size = Vector2(42, 42)
layout_mode = 0
offset_right = 38.0
offset_bottom = 38.0
focus_mode = 0
theme_override_icons/checked = ExtResource("3_k1ht7")
theme_override_icons/unchecked = ExtResource("4_r2wvk")

[node name="ValueInt" type="Label" parent="ParameterContainer/ParameterValue"]
visible = false
custom_minimum_size = Vector2(132, 42)
layout_mode = 0
offset_right = 180.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "int"
vertical_alignment = 1
clip_text = true

[node name="IntField" type="LineEdit" parent="ParameterContainer/ParameterValue/ValueInt"]
custom_minimum_size = Vector2(82, 42)
layout_mode = 0
offset_left = 82.0
offset_right = 164.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 20
text = "0"
max_length = 6

[node name="IntOperator" type="Button" parent="ParameterContainer/ParameterValue/ValueInt"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 44.0
offset_top = 9.0
offset_right = 68.0
offset_bottom = 33.0
focus_mode = 0
theme = ExtResource("5_1ugmp")
theme_override_font_sizes/font_size = 14
text = "
"
expand_icon = true

[node name="OperatorLabel" type="Label" parent="ParameterContainer/ParameterValue/ValueInt/IntOperator"]
custom_minimum_size = Vector2(38, 38)
layout_mode = 0
offset_left = -7.0
offset_top = -12.0
offset_right = 31.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueFloat" type="Label" parent="ParameterContainer/ParameterValue"]
visible = false
custom_minimum_size = Vector2(180, 42)
layout_mode = 0
offset_right = 132.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "float"
vertical_alignment = 1
clip_text = true

[node name="FloatField" type="LineEdit" parent="ParameterContainer/ParameterValue/ValueFloat"]
custom_minimum_size = Vector2(82, 42)
layout_mode = 0
offset_left = 98.0
offset_right = 180.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 20
text = "0"
max_length = 6

[node name="FloatOperator" type="Button" parent="ParameterContainer/ParameterValue/ValueFloat"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 62.0
offset_top = 9.0
offset_right = 86.0
offset_bottom = 33.0
focus_mode = 0
theme = ExtResource("5_1ugmp")
theme_override_font_sizes/font_size = 14
text = "
"
expand_icon = true

[node name="OperatorLabel" type="Label" parent="ParameterContainer/ParameterValue/ValueFloat/FloatOperator"]
custom_minimum_size = Vector2(38, 38)
layout_mode = 0
offset_left = -7.0
offset_top = -12.0
offset_right = 31.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueString" type="LineEdit" parent="ParameterContainer/ParameterValue"]
visible = false
custom_minimum_size = Vector2(176, 42)
layout_mode = 0
theme_override_font_sizes/font_size = 20
placeholder_text = "Value"
max_length = 10

[node name="Dash" type="Label" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 174.0
offset_top = -17.0
offset_right = 181.0
offset_bottom = 9.0
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_constants/outline_size = 4
text = "_"

[node name="LoadButton" type="MenuButton" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 383.0
offset_top = 9.0
offset_right = 407.0
offset_bottom = 33.0
theme = ExtResource("5_1ugmp")
theme_override_font_sizes/font_size = 26
icon = ExtResource("6_m8j16")
flat = false
expand_icon = true
item_count = 5
popup/item_0/text = "Trigger"
popup/item_0/id = 0
popup/item_1/text = "Bool"
popup/item_1/id = 1
popup/item_2/text = "Int"
popup/item_2/id = 2
popup/item_3/text = "Float"
popup/item_3/id = 3
popup/item_4/text = "String"
popup/item_4/id = 4

[node name="Delete" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 424.0
offset_top = 5.0
offset_right = 456.0
offset_bottom = 37.0
focus_mode = 0
theme = ExtResource("5_1ugmp")
theme_override_colors/icon_normal_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_colors/icon_disabled_color = Color(1, 0, 0, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_s28i4")
icon = ExtResource("7_gvnje")
expand_icon = true

[connection signal="pressed" from="ParameterContainer/ParameterValue/ValueBool" to="." method="_bool_value_changed"]
[connection signal="focus_entered" from="ParameterContainer/ParameterValue/ValueInt/IntField" to="." method="_int_value_focus"]
[connection signal="text_submitted" from="ParameterContainer/ParameterValue/ValueInt/IntField" to="." method="_int_value_changed"]
[connection signal="pressed" from="ParameterContainer/ParameterValue/ValueInt/IntOperator" to="." method="_operator_pressed"]
[connection signal="focus_entered" from="ParameterContainer/ParameterValue/ValueFloat/FloatField" to="." method="_float_value_focus"]
[connection signal="text_submitted" from="ParameterContainer/ParameterValue/ValueFloat/FloatField" to="." method="_float_value_changed"]
[connection signal="pressed" from="ParameterContainer/ParameterValue/ValueFloat/FloatOperator" to="." method="_operator_pressed"]
[connection signal="focus_entered" from="ParameterContainer/ParameterValue/ValueString" to="." method="_string_value_focus"]
[connection signal="about_to_popup" from="LoadButton" to="." method="_load_button_pressed"]
[connection signal="pressed" from="Delete" to="." method="_remove_pressed"]
